Add specification for server sent events
